syntax = "proto3";
package course.stats;

import "course/common.proto";


message CourseStats {
    int32 total_courses = 1;
    int32 draft_courses = 2;
    int32 published_courses = 3;
    int32 un_published_courses = 4;
}

message MonthlyCoursesEnrollment {
    int32 month = 1;
    int32 count = 2;
}

message GetInstructorCourseRatingStatsRequest {
    string course_id = 1;
    string instructor_id = 2;
}

message RatingsBreakDown {
  int32 _1 = 1; 
  int32 _2 = 2; 
  int32 _3 = 3; 
  int32 _4 = 4; 
  int32 _5 = 5; 
}

message InstructorCourseRatingStats {
    double average_rating = 1;
    double total_ratings = 2;
    RatingsBreakDown breakdown  = 3;
}

message CourseEnrollmentTrend {
    int32 date = 1;
    int32 enrollments = 2;
}

message GetInstructorCourseEnrollmentSummeryRequest {
    string instructor_id = 1;
    string course_id = 2;
}

message InstructorCourseEnrollmentTrend {
   repeated CourseEnrollmentTrend trend = 1;
}


message MonthlyCoursesEnrollmentStats {
    repeated MonthlyCoursesEnrollment stats = 1;
}

message GetInstructorCoursesStatsRequest {
    string instructor_id = 1;
}
message GetInstructorCoursesEnrollmentSummeryRequest {
    string instructor_id = 1;
}
message GetMonthlyCoursesEnrollmentStatsRequest {
    string year = 1;
}



message InstructorCoursesStats {
    int32 total_courses = 1;
    int32 published_courses = 2;
    int32 draft_courses = 3;
    int32 total_students = 4;
    int32 average_rating = 5;
    int32 average_revenue = 6;
}

message InstructorCourseEnrollmentSummery {
    int32 total_students = 1;
    int32 completion_rate = 2;
    int32 avg_progress = 3;
}


message RevenueStat {
    int32 date = 1;
    int32 revenue = 2;
}
message RevenueStats {
    repeated RevenueStat stats = 1;
}

message InstructorCoursesEnrollmentSummery {
    int32 total_students = 1;
    int32 total_earnings = 2;
    int32 avg_completion = 3;
    int32 active_students = 4;
}

message GetInstructorCourseEnrollmentTrendRequest {
    string course_id = 1;
    string instructor_id = 4;
    string from = 2;
    string to = 3;
}
message GetRevenueStatsRequest {
    string year = 1;
}



message GetCoursesStatsResponse {
  oneof result {
    CourseStats success = 1;
    course.common.Error error = 2;
  }
}
message GetMonthlyCoursesEnrollmentStatsResponse {
  oneof result {
    MonthlyCoursesEnrollmentStats success = 1;
    course.common.Error error = 2;
  }
}
message GetInstructorCourseEnrollmentSummeryResponse {
  oneof result {
    InstructorCourseEnrollmentSummery success = 1;
    course.common.Error error = 2;
  }
}
message GetRevenueStatsResponse {
  oneof result {
    RevenueStats success = 1;
    course.common.Error error = 2;
  }
}

message GetInstructorCoursesEnrollmentSummeryResponse {
  oneof result {
    InstructorCoursesEnrollmentSummery success = 1;
    course.common.Error error = 2;
  }
}
message GetInstructorCoursesStatsResponse {
  oneof result {
    InstructorCoursesStats success = 1;
    course.common.Error error = 2;
  }
}

message GetInstructorCourseEnrollmentTrendResponse {
  oneof result {
    InstructorCourseEnrollmentTrend success = 1;
    course.common.Error error = 2;
  }
}
message GetInstructorCourseRatingStatsResponse {
  oneof result {
    InstructorCourseRatingStats success = 1;
    course.common.Error error = 2;
  }
}
